style.css
/* ... */
.entry-title {
	clear: none;
	font-size: 24px;
	font-size: 2.4rem;
	margin: 0 0 .3em 0;
}
.single .entry-title,
.page .entry-title,
.not-found .entry-title {
	font-size: 28px;
	font-size: 2.8rem;
}
.page-title {
	color: #aaa;
	font-family: inherit;
	font-size: 12px;
	font-size: 1.2rem;
	font-weight: inherit;
	line-height: 1.2;
	margin-bottom: 1.3em;
	text-transform: uppercase;
}
.entry-meta {
	color: #aaa;
	font-size: 12px;
	font-size: 1.2rem;
	line-height: 1.2;
	text-transform: uppercase;
}
.entry-content {
	margin: 1.5em 0 0;
}
.debut-has-thumb .entry-title,
.debut-has-thumb .entry-meta,
.debut-has-thumb .entry-content {
	margin-left: 25.774%;
}
.byline {
	display: none;
}
.group-blog .byline {
	display: inline;
}
.page-links {
	clear: both;
	margin: 0 0 1.5em;
}


/* =Asides
----------------------------------------------- */

.blog .format-aside .entry-title,
.archive .format-aside .entry-title {
	display: none;
}


/* =Media
----------------------------------------------- */

.site-header img,
.entry-header img,
.entry-content img,
.comment-content img,
.widget img,
img.size-full {
	max-width: 100%; /* Fluid images for posts, comments, and widgets */
}
.site-header img,
.entry-header img,
.entry-content img,
.widget img,
img[class*="align"],
img[class*="wp-image-"] {
	height: auto; /* Make sure images with WordPress-added height and width attributes are scaled correctly */
}
.entry-content img.wp-smiley,
.comment-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}
.wp-caption {
	max-width: 100%;
}
.wp-caption.alignleft,
.wp-caption.alignright {
	margin-bottom: .5em;
}
.wp-caption {
	margin-bottom: 1.5em;
	max-width: 100%;
}
.wp-caption img {
	border-width: 0 0 1px 0;
	box-shadow: none;
	display: block;
	margin: 0;
	max-width: 100%;
}
.wp-caption-text {
	color: #aaa;
	font-size: 14px;
	font-size: 1.4rem;
	font-style: italic;
	line-height: 1.2;
	text-align: center;
}
.wp-caption .wp-caption-text {
	margin: 1em;
}
#content .gallery {
	margin-bottom: 1.5em;
}
.gallery-caption {
}
#content .gallery a img {
	border: none;
	height: auto;
	max-width: 90%;
}
#content .gallery dd {
	margin: 0;
}
/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}
/* Featured images */
.attachment-thumbnail.wp-post-image {
	float: left;
	height: auto;
	width: 22.678%;
}
.attachment-debut-featured {
	display: block;
	margin-bottom: 1.5em;
}


/* =Navigation
----------------------------------------------- */

.small-navigation {
	display: none;
}
#content .site-navigation {
	border-top: 1px solid #efefef;
	padding: 1em 0;
	overflow: hidden;
}
.comment-navigation {
	border-bottom: 1px solid #efefef;
}
#content .nav-previous,
#content .previous-image {
	float: left;
	width: 50%;
}
#content .nav-next,
#content .next-image {
	float: right;
	text-align: right;
	width: 50%;
}
#image-navigation {
	margin-top: 1.5em;
}


/* =Comments
----------------------------------------------- */

.comments-title,
#reply-title {
	padding-top: 1.5em;
}
.single .comments-title {
	border-top: 1px solid #efefef;
}
.commentlist {
	list-style: none;
	margin-left: 0;
}
.commentlist ul.children {
	list-style: none;
	margin-left: 80px;
}
.depth-1 {
	margin-top: 2.5em;
}
.comment .avatar {
	float: left;
}
.comment-meta,
.comment-content {
	margin-left: 80px;
}
.comment-meta {
	color: #aaa;
	font-size: 12px;
	font-size: 1.2rem;
	margin-bottom: 1.5em;
	position: relative;
	text-transform: uppercase;
}
.perma-reply-edit {
	float: right;
	margin: 0 0 .5em .5em;
}
.comment-meta h4 {
	clear: none;
	color: #555;
	font-size: 16px;
	font-size: 1.6rem;
	line-height: 1.2em;
	margin-bottom: .2em;
	text-transform: none;
}
.comment-awaiting,
.nocomments {
	font-weight: 400;
	text-align: center;
}
/* By post author */
.bypostauthor {
	background-color: #efefef;
	border: 1px solid #ddd;
	padding: 1.5465%;
}
.bypostauthor .comment-content p:last-child {
	margin-bottom: 0;
}
/* Reply form */
#respond {
	margin-bottom: 1em; /* Correction for Jetpack Comments iframe */
}
#reply-title small a,
#cancel-comment-reply-link {
	font-family: Helvetica, sans-serif;
	font-size: 12px;
	font-size: 1.2rem;
	text-transform: uppercase;
}
.comment-form-author,
.comment-form-email,
.comment-form-url {
	width: 32%;
}
.comment-form-comment {
	clear: both;
	width: 100%;
}
#commentform div {
	margin-bottom: 1em;
}
#commentform label {
	display: none;
}
#commentform ::-webkit-input-placeholder {
   color: #aaa;
}
#commentform :-moz-placeholder {  
   color: #aaa;  
}
.form-allowed-tags {
	color: #aaa;
	font-size: 14px;
	font-size: 1.4rem;
}
.page-template-full-width-php #comments {
	max-width: 64.667%;
}

/* =Widgets
----------------------------------------------- */

#secondary,
#tertiary {
	font-size: 14px;
	font-size: 1.4rem;
	padding-left: 2%;
	width: 29.333%;
}
.widget {
	word-wrap: break-word;
}
.widget-title {
	font-size: 16px;
	font-size: 1.6rem;
}
.widget p {
	margin-bottom: .5em;
}
.widget > ul,
.widget_nav_menu ul.menu {
	list-style: none;
	margin-left: 0;
}
.widget_archive select,
.widget_categories select {
	margin-bottom: 1.5em;
}
/* Search widget */
.widget_search .widget-title {
	display: none;
}
.widget_search form.searchform {
	margin: 0;
	position: relative;
	width: 100%;
}
.widget_search form.searchform input[type="text"] {
	background-color: #fff;
	width: 96%;
}
.widget_search ::-webkit-input-placeholder { /* Change color of placeholder text */
   /*color: #000;*/
}
.widget_search :-moz-placeholder {  /* Change color of placeholder text */
   /*color: #000;*/  
}
input.searchsubmit {
	display: none;
}
/* Calendar widget */
.widget_calendar caption {
	text-transform: uppercase;
	margin-bottom: .3em;
	padding-bottom: .3em;
}
.widget_calendar table {
	border-collapse: collapse;
}
.widget_calendar tfoot td {
	padding-top: .3em;
}
#next {
	text-align: right;
}
/* ... */

